--- a/P000018.opf/meta.yml
+++ b/P000018.opf/meta.yml
@@ -1,15 +1,17 @@
-ebook_metadata:
+id: P000018
+initial_creation_type: ebook
+source_metadata:
   title: ༄༅། །འདིར་རང་གཞན་ལ་བསླབ་བྱ་གྲོས་འདེབས་ཀྱི་སྐོར་རྣམས་ཕྱོགས་གཅིག་ཏུ་བསྡེབས་པ་ལྷག་བསམ་རབ་དཀར་པདྨའི་འཕྲེང་བའོ།
     །
   authors:
   - མཛད་པ་པོ། མཁས་གྲུབ་ཆེན་པོ་རྩེ་ལེ་སྣ་ཚོགས་རང་གྲོལ།
-  sku: TSD-TSE-08
   layers:
   - book_title
   - author
   - chapter_title
   - quotation
   - yigchung
+  id: TSD-TSE-08
 web_metadata:
   title:
     en: A Lotus Garland of Pure Intention:A Collection of Various Spiritual Advice
