layers filename capitalized

--- a/P000018.opf/layers/v001/BookTitle.yml
+++ b/P000018.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 3bc0aa1fbe0845369f723bf3e88a8022
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
