--- a/P000018.opf/layers/v001/Chapter.yml
+++ b/P000018.opf/layers/v001/Chapter.yml
@@ -1,5 +1,5 @@
 id: a87d083a001b4e45b1cb2c2847ca3677
-annotation_type: chapter_title
+annotation_type: Chapter
 revision: '00001'
 annotations:
 - id: 4ac817ffd79d428e8dbccb3f7f2df82a
