--- a/P000018.opf/layers/v001/Quotation.yml
+++ b/P000018.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: ef7853a33d7d43789525da48be768f44
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: dc71a33301054c4880adabbdb05123ec
