--- a/P000018.opf/layers/v001/Yigchung.yml
+++ b/P000018.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: 5316323a437c4065942ea62a08e73bb9
-annotation_type: Tsawa
+annotation_type: Yigchung
 revision: '00001'
 annotations:
   52bea1dbab38405c8512f0bdd68ed33d:
